--- a/Analayzee/templates/main/analysis.html
+++ b/Analayzee/templates/main/analysis.html
@@ -242,6 +242,7 @@
 {% endblock %}
 
 {% block extra_js %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="{% static 'js/tab-switching.js' %}"></script>
 <script src="{% static 'js/magical-table.js' %}"></script>
