--- a/Analayzee/templates/main/analysis.html
+++ b/Analayzee/templates/main/analysis.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="{% static 'css/components.css' %}">
 <link rel="stylesheet" href="{% static 'css/charts.css' %}">
 <link rel="stylesheet" href="{% static 'css/statistics.css' %}">
+<link rel="stylesheet" href="{% static 'css/data-cleaning.css' %}">
 {% endblock %}
 
 {% block content %}
